--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,10 +11,11 @@ import Layout from '../components/Layout'
 <section class="mdx-page">
 
 # Youngjae Jay Lim
+
 ### Full-Stack Software Engineer/Data Analyst
 
 | Contact        |                                                                    |
-| -------------- | ----------------------------------------------------------------   |
+| -------------- | ------------------------------------------------------------------ |
 | <FaEnvelope /> | limyoungjae@gmail.com                                              |
 | <FaPhone />    | 917-733-0790                                                       |
 | <FaHome />     | [https://youngjae-lim.github.io](https://youngjae-lim.github.io)   |
@@ -23,13 +24,16 @@ import Layout from '../components/Layout'
 # ✍️Summary
 
 <blockquote display='default'>
-I am a full stack software engineer as well as a data analyst in NYC
-who is seeking remote/freelancing/full-time opportunities. I am
-passionate about building full-stack applications using variety of tools as well as collecting, processing, exploring, and publishing data and building anything involving modern web technology. When I am not at my computer, I am a photographer as well.
+  I am a full stack software engineer as well as a data analyst in NYC who is
+  seeking remote/freelancing/full-time opportunities. I am passionate about
+  building full-stack applications using variety of tools as well as collecting,
+  processing, exploring, and publishing data and building anything involving
+  modern web technology. When I am not at my computer, I am a photographer as
+  well.
 </blockquote>
 
-<blockquote display="info">
-Note: I am authorized to work in US.(i.e., a permanent resident)
+<blockquote display='info'>
+  Note: I am authorized to work in US.(i.e., a permanent resident)
 </blockquote>
 
 - My current interests related to web technologies are:
@@ -40,17 +44,16 @@ Note: I am authorized to work in US.(i.e., a permanent resident)
   - Building microservices using `Go` and `gRPC`
   - Container orchestration using `Kubernetes` & `AWS EKS`
   - Using Github and GitHub Actions as Serverless platform
-    - __This website itself is being hosted in Github Pages using Github Actions following `CI/CD` practice__
+    - **This website itself is being hosted in Github Pages using Github Actions following `CI/CD` practice**
   - Learning `Datasette` as data exploring, publishing tool
-  - Improving PKM(Personal Knowledge Management) system using **Roam Research** 
+  - Improving PKM(Personal Knowledge Management) system using **Roam Research**
   - Learning `Rust` programming language as a back-end tool
   - Architecturing CSS
-
 
 # 📚EDUCATION
 
 | Year | Institution         | Major             | Degree              |
-| -----| ------------------- |------------------ | ------------------- | 
+| ---- | ------------------- | ----------------- | ------------------- |
 | 2010 | Columbia University | Actuarial Science | Master of Science   |
 | 2009 | Stanford University | Statistics        | Master of Science   |
 | 2007 | Korea University    | Computer Science  | Bachelor of Science |
@@ -63,22 +66,23 @@ Note: I am authorized to work in US.(i.e., a permanent resident)
 
 - Worked with a variety of different programming languages, frameworks, and content manage systems(`CMS`) such as JavaScript, React, Next.js, Svelte, SvelteKit, Vue, Node.js, Express.js Prismic, WordPress, Contentful, Sanity.io, Strapi
 
-- Built  Back-end APIs following `RESTful` standards `Express.js` & `MongoDB Atalas Cloud` to allow users to create job applications that they applied and keep track of them using `useReducer` hooks + `Context` in `React` instead of `Redux`
+- Built Back-end APIs following `RESTful` standards `Express.js` & `MongoDB Atalas Cloud` to allow users to create job applications that they applied and keep track of them using `useReducer` hooks + `Context` in `React` instead of `Redux`
 
 - Developed a full-stack web application to create/manage events using `Next.js` and `Strapi` CMS backend
 
-- Developed a front-end E-commerce website using both `Gatsby` & `Vue.js` and connected it to `Shopify` back-end service 
+- Developed a front-end E-commerce website using both `Gatsby` & `Vue.js` and connected it to `Shopify` back-end service
 
 - Built a front-end static website using `Gatsby` and `Prismic CMS` as a backend
 
 - Created a full-stack web E-Commerce application using `Go` & `Stripe` that consists of multiple, separate applications:
+
   - a virtual terminal whose authenciated user is able to process credit card payments from a secure form with the `Stripe` API
   - a front-end web application that allows a user to purchase a product, or purchase a recurring monthly subscription
   - microservice that performs only one task, but performs very well, dynamically building PDF invoices and sending them to custormers as an email attachment
 
 - Built a `Gosnel` web framework using `Go` programming language that is very similar to Laravel PHP Web Framework to speed up full-stack web application development process for future clients
 
-### 🔗[Projects](https://youngjae-lim.github.io/projects)
+### 🔗[Projects](/projects)
 
 ## 📆2011 - 2018
 
@@ -87,51 +91,50 @@ Note: I am authorized to work in US.(i.e., a permanent resident)
 #### Analytical :
 
 - Worked on Life Statistical Services to assist life insurance companies in complying with mandatory
-mortality experience reporting as required by the state regulators (New York Department of
-Financial Services, Kansas Insurance Department)
+  mortality experience reporting as required by the state regulators (New York Department of
+  Financial Services, Kansas Insurance Department)
 - Took responsibility for doing actuarial analysis and review of 20 data contributors in Life Statistical
-Services
+  Services
 - Assisted in defining Exact Exposure Formulas depending on the various situations such as inforce,
-death terminations, lapses, non-death, and non-lapse terminations, etc
+  death terminations, lapses, non-death, and non-lapse terminations, etc
 - Designed and implemented a Comparison Report to compare the current calendar year mortality
-data to prior year’s data
+  data to prior year’s data
 - Participated in the SOA Credit Risk Experience Study : Private Placement Bonds
 - Built up solid understanding of relational database, multi-dimensional database, and Star
-Schema from the per:webspective of Business Intelligence Tool
+  Schema from the per:webspective of Business Intelligence Tool
 
 #### Techinical :
 
-- Managed a team consisting of database developers, actuaries to build a full-stack life insurance compliance reporting-system 
+- Managed a team consisting of database developers, actuaries to build a full-stack life insurance compliance reporting-system
   - Programmed `Transact-SQL` stored-procedures to automate syntax, validation checks on individual
-life insurance companies’ mortality data
+    life insurance companies’ mortality data
   - Generated various drill-down capable `Excel Pivot Table` reports including A/E Ratio Reports sent
   - Created, updated, and maintained `VBScript` codes to automatically create numerous Excel Pivot
-to companies and state regulators using `Visual Basic .NET` technology
+    to companies and state regulators using `Visual Basic .NET` technology
   - Optimized MS SQL Server query performance to deal with a high volume of data from big insurance companies
 - Provided underlying aggregate/preferred mortality data from multiple data sources to be used in
-SOA ILEC 09-10 Individual Life Experience Mortality Study
-Table Reports for Life Statistical Services
+  SOA ILEC 09-10 Individual Life Experience Mortality Study
+  Table Reports for Life Statistical Services
 - Developed and shared `SQL` codes to summarize each company’s preferred class structure in the
-data to compare it to Preferred Class Structure Questionnaire given by companies
-- Built `COGNOS` analytical reports called **Critical Review Forms** for actuaries that saved hundreds of hours a month from doing manual data analysis 
-
+  data to compare it to Preferred Class Structure Questionnaire given by companies
+- Built `COGNOS` analytical reports called **Critical Review Forms** for actuaries that saved hundreds of hours a month from doing manual data analysis
 
 #### Interpersonal :
 
 - Managed 3 junior actuarial analysts
 - Played a pivotal role in filling in gaps between actuarial department in NY and developer team in MA for implementing
-Exact Exposure Calculations by translating complicated actuarial concepts to easy
-languages for database programmers
+  Exact Exposure Calculations by translating complicated actuarial concepts to easy
+  languages for database programmers
 - Communicated with each individual life insurance company contributing mortality data through
-an email, a conference call, and a written memo of actuarial analysis and review
+  an email, a conference call, and a written memo of actuarial analysis and review
 - Trained other actuarial analysts in `COGNOS` IBM business Intelligence tool
 
 #### Organizational :
 
 - Documented “Detail Data Instructions for NAIC VM-51 Mortality Data Format” containing detailed
-instructions along with numerical examples sent to individual life insurance companies
+  instructions along with numerical examples sent to individual life insurance companies
 - Documented an individual company’s historical mortality data quality following recommended
-practices in Actuarial Standard of Practice No. 23(ASOP 23)
+  practices in Actuarial Standard of Practice No. 23(ASOP 23)
 
 ## 📆2010 - 2011
 
@@ -139,7 +142,8 @@ practices in Actuarial Standard of Practice No. 23(ASOP 23)
 
 - Provided a variety of underlying tables and views in MS-SQL Server as Syntax, Validation, and Resonableness Checks
 - Generated various summary reports related to individual mortality experience study using Advanced Excel VBA Skill
-- Assisted in conducting various SOA Experience Studies such as Individual Life Mortality, StructuredSettlements, Payout Annuities
+- Assisted in conducting various SOA Experience Studies such as Individual Life Mortality, Structured
+  Settlements, Payout Annuities
 
 # 🖥️SKILL
 
@@ -149,29 +153,29 @@ practices in Actuarial Standard of Practice No. 23(ASOP 23)
 
 ## Libraries & Framewokrs
 
-| Language   | Frameworks                                                                  |
-| ---------- | --------------------------------------------------------------------------- |
-| JavaScript | `React`, `Gatsby`, `Svelte`, `SvelteKit`, `Next.js`, `Node.js`, `Express.js`|
-| Python     | `Django`, `FastAPI`                                                         |
-| Go         | `Gosnel`(framework that I am currently making in progress)                  |
-| CSS        | `Bootstrap`, `Tailwind CSS`, `Semantic UI`                                  |
+| Language   | Frameworks                                                                   |
+| ---------- | ---------------------------------------------------------------------------- |
+| JavaScript | `React`, `Gatsby`, `Svelte`, `SvelteKit`, `Next.js`, `Node.js`, `Express.js` |
+| Python     | `Django`, `FastAPI`                                                          |
+| Go         | `Gosnel`(framework that I am currently making in progress)                   |
+| CSS        | `Bootstrap`, `Tailwind CSS`, `Semantic UI`                                   |
 
 ## Tools & Platforms
 
-| Category                       | Tools & Platforms |
-| -----------------------        | ------------------------------------------ |
-| Code Editing                   | `Vim`, `VS Code`|
-| Cloud                          | `AWS`, `Google Cloud Platform`, `Heroku`, `Digital Ocean`, `Linode`, `Netlify`, `Vercel`, `Gatsby Cloud`, `MongoDB Atlas Cloud`, `Supabase`|
-| DevOps                         | `Git`, `GitHub`, `Docker`, `Kubernetes`|
-| CMS(Content Management System) | `WordPress`, `Prismic`, `Sanity.io`, `Contentful`, `Strapi`|
-| OS(Operating Systems)          | `Windows`, `Unix`, `Linux`, `MacOS`|
+| Category                       | Tools & Platforms                                                                                                                           |
+| ------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------- |
+| Code Editing                   | `Vim`, `VS Code`                                                                                                                            |
+| Cloud                          | `AWS`, `Google Cloud Platform`, `Heroku`, `Digital Ocean`, `Linode`, `Netlify`, `Vercel`, `Gatsby Cloud`, `MongoDB Atlas Cloud`, `Supabase` |
+| DevOps                         | `Git`, `GitHub`, `Docker`, `Kubernetes`                                                                                                     |
+| CMS(Content Management System) | `WordPress`, `Prismic`, `Sanity.io`, `Contentful`, `Strapi`                                                                                 |
+| OS(Operating Systems)          | `Windows`, `Unix`, `Linux`, `MacOS`                                                                                                         |
 
-## Databases 
+## Databases
 
-| Type   | Databases |
-| ---------- | --------------------------------------------------------------------------- |
-| SQL | `PostgreSQL`, `SQLite`, `MySql`, `MariaDB`, `MS SQL Server`|
-| NoSQL     | `MongoDB`, `Redis`                                                        |
+| Type  | Databases                                                   |
+| ----- | ----------------------------------------------------------- |
+| SQL   | `PostgreSQL`, `SQLite`, `MySql`, `MariaDB`, `MS SQL Server` |
+| NoSQL | `MongoDB`, `Redis`                                          |
 
 ## Design
 
