Removed margin-top from h5

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -82,7 +82,7 @@ import Layout from '../components/Layout'
 
 - Built a `Gosnel` web framework using `Go` programming language that is very similar to Laravel PHP Web Framework to speed up full-stack web application development process for future clients
 
-### 🔗[Projects](/projects)
+### [Projects](/projects)
 
 ## 📆2011 - 2018
 
