--- a/src/posts/2022-04-04-Cookie-Session-Auth/post.mdx
+++ b/src/posts/2022-04-04-Cookie-Session-Auth/post.mdx
@@ -1,5 +1,5 @@
 ---
-title: Cookie Session Authentication
+title: Cookie Session Authentication In SvelteKit
 slug: cookie-session-auth-in-sveltekit
 image: ./images/main_sveltekit_auth.png
 date: 2022-04-04
