Made ui better on Card component

--- a/src/projects/FullStack-Music-Events/project.mdx
+++ b/src/projects/FullStack-Music-Events/project.mdx
@@ -4,8 +4,9 @@ slug: music-events
 image: ./images/main.png
 date: 2021-09-02
 author: Youngjae Lim
+published: true
 category: PROJECT
-tags: ["next.js", "cms", "strapi", "react"]
+tags: ['next.js', 'cms', 'strapi', 'react']
 readTime: 3
 ---
 
@@ -13,7 +14,7 @@ import { Link } from 'gatsby'
 
 ### Overview
 
-This is a website that allows you to find/search for music events. You can also register/login yourself to create  new events and keep track of them. In addition, an admin can use a Strapi CMS to create/delete/edit events and manange users. 
+This is a website that allows you to find/search for music events. You can also register/login yourself to create new events and keep track of them. In addition, an admin can use a Strapi CMS to create/delete/edit events and manange users.
 
 ### Demo Website
 
@@ -25,6 +26,7 @@ Note that back-end demo is an admin only website that requires login credentials
 ### Stack
 
 - Back-end
+
   - Node.js
   - **Strapi CMS (Content Management System)** deployed to Heroku Platform
   - Postgres Database
