--- a/src/projects/Gosnel-Web-Framework/project.mdx
+++ b/src/projects/Gosnel-Web-Framework/project.mdx
@@ -4,8 +4,9 @@ slug: gosnel-web-framework
 image: ./images/main.png
 date: 2022-02-05
 author: Youngjae Lim
+published: true
 category: PROJECT
-tags: ["go", "framework"]
+tags: ['go', 'framework']
 readTime: 3
 ---
 
@@ -14,6 +15,7 @@ import { Link } from 'gatsby'
 ### Overview
 
 Gosnel is an web application framework like Laravel in the PHP. It features:
+
 - An Object Relation Mapper(ORM) that is database agnostic
 - A fully functional Database Migration System
 - A fully featured User Authentication System that can be installed using a command-line application:
@@ -26,7 +28,6 @@ Gosnel is an web application framework like Laravel in the PHP. It features:
 - A command-line application which allows a user to:
   - Generate emails, handlers, and database models
   - Create a ready-to-go web application by typing a single command: `gosnel new <myproject>`
-
 
 ### Stack
 
