--- a/src/projects/URL-Shortener/project.mdx
+++ b/src/projects/URL-Shortener/project.mdx
@@ -4,8 +4,9 @@ slug: diy-url-shortener
 image: ./images/main.png
 date: 2022-02-15
 author: Youngjae Lim
+published: true
 category: PROJECT
-tags: ["go", "utility", "docker", "redis"]
+tags: ['go', 'utility', 'docker', 'redis']
 readTime: 2
 ---
 
