--- a/src/projects/E-Commerce-Backend-APIs/project.mdx
+++ b/src/projects/E-Commerce-Backend-APIs/project.mdx
@@ -1,11 +1,12 @@
 ---
 title: E-Commerce Backend APIs
-slug: ecommerce-backend-api 
+slug: ecommerce-backend-api
 image: ./images/main.png
 date: 2022-02-20
 author: Youngjae Lim
+published: true
 category: PROJECT
-tags: ["node.js", "express.js", "mongodb"]
+tags: ['node.js', 'express.js', 'mongodb']
 readTime: 3
 ---
 
@@ -13,7 +14,7 @@ import { Link } from 'gatsby'
 
 ### Overview
 
-This is a back-end RESTful APIs for building a shopping website. Since the back-end apis are totally decoupled with the front-end, it makes it easy for a developer who wants to create a shopping website to use any front-end web frameworks/tools to build the website. 
+This is a back-end RESTful APIs for building a shopping website. Since the back-end apis are totally decoupled with the front-end, it makes it easy for a developer who wants to create a shopping website to use any front-end web frameworks/tools to build the website.
 
 ### Demo Website
 
@@ -23,8 +24,8 @@ Note that it might take a while to load a landing page when you visit the websit
 
 ### Stack
 
-1. Node.js & Express.js 
-2. Mongo Database Atlas Cloud 
+1. Node.js & Express.js
+2. Mongo Database Atlas Cloud
 
 ### Github Repository
 
