--- a/src/projects/FullStack-Job-Trak-Web-App/project.mdx
+++ b/src/projects/FullStack-Job-Trak-Web-App/project.mdx
@@ -4,8 +4,9 @@ slug: job-tracking-web-application
 image: ./images/main.png
 date: 2022-01-20
 author: Youngjae Lim
+published: true
 category: PROJECT
-tags: ["node.js", "express.js", "full-stack", "react", "mern-stack", "mongodb"]
+tags: ['node.js', 'express.js', 'full-stack', 'react', 'mern-stack', 'mongodb']
 readTime: 3
 ---
 
@@ -24,6 +25,7 @@ Note that it might take a while to load a landing page when you visit the websit
 ### Stack
 
 - Back-end
+
   - Node.js, Express.js deployed to Heroku platform
   - Monogo Database Atlas Cloud
 
